fix: font break on shop container, font size on map filter

--- a/src/components/FilterContainer/FilterContainer.css
+++ b/src/components/FilterContainer/FilterContainer.css
@@ -8,7 +8,7 @@
     line-height: 30px;
 }
 
-.FilterContainer .FirstOption {
+.FilterContainerFirstOption {
     font-size: 16px;
     margin-right: 8px;
     vertical-align: text-bottom;
