--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -15,7 +15,7 @@
     flex: 1 1 0%;
 }
 
-.FirstOption {
+.SearchBarFirstOption {
     font-size: 24px;
     margin-right: 8px;
     vertical-align: initial;
